alteracao do metodo toList para collectors toList